--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <header>
     
-    <h1>Today is Nick's birthday 🎉</h1>
+    <h1>Today is Caleb's birthday 🎉</h1>
     <img 
          src="https://bankolecaleb.github.io/birthday-surprise/images/nick.jpg" 
          alt="A.I generated image"
